Fix all test