@@ -18,36 +18,34 @@ public class LoadDataTest {
 
     private static final Map<Integer, String> DWH_HEADER;
     static {
-        Map<Integer, String> dwhHeader = new HashMap<>();
-        dwhHeader.put(0, "ordine_id_carrello");
-        dwhHeader.put(1, "ordine_data");
-        dwhHeader.put(2, "ordine_giorno_nome");
-        dwhHeader.put(3, "ordine_giorno_dell_anno");
-        dwhHeader.put(4, "ordine_mese_nome");
-        dwhHeader.put(5, "ordine_anno_valore");
-        dwhHeader.put(6, "ordine_mese_valore");
-        dwhHeader.put(7, "ordine_trimestre");
-        dwhHeader.put(8, "ordine_periodo");
-        dwhHeader.put(9, "ordine_trimestre_anno");
-        dwhHeader.put(10, "ordine_mese_anno");
-        dwhHeader.put(11, "ordine_feriale_non");
-        dwhHeader.put(12, "ordine_festivo_non");
-        dwhHeader.put(13, "ordine_codice_stato");
-        dwhHeader.put(14, "ordine_stato_nome");
-        dwhHeader.put(15, "ordine_sesso_acquirente");
-        dwhHeader.put(16, "ordine_quantita");
-        dwhHeader.put(17, "ordine_prezzo_pagato");
-        dwhHeader.put(18, "ordine_sconto");
-        dwhHeader.put(19, "ordine_outlet");
-        dwhHeader.put(20, "ordine_brand");
-        dwhHeader.put(21, "ordine_collezione");
-        dwhHeader.put(22, "ordine_colore");
-        dwhHeader.put(23, "ordine_sesso_articolo");
-        dwhHeader.put(24, "ordine_metodo_pagamento");
-        dwhHeader.put(25, "ordine_taglia");
-        dwhHeader.put(26, "ordine_categoria");
-        dwhHeader.put(27, "ordine_macro_categoria");
-        DWH_HEADER = Collections.unmodifiableMap(dwhHeader);
+        DWH_HEADER = Map.ofEntries(Map.entry(0, "ordine_id_carrello"),
+                Map.entry(1, "ordine_data"),
+                Map.entry(2, "ordine_giorno_nome"),
+                Map.entry(3, "ordine_giorno_dell_anno"),
+                Map.entry(4, "ordine_mese_nome"),
+                Map.entry(5, "ordine_anno_valore"),
+                Map.entry(6, "ordine_mese_valore"),
+                Map.entry(7, "ordine_trimestre"),
+                Map.entry(8, "ordine_periodo"),
+                Map.entry(9, "ordine_trimestre_anno"),
+                Map.entry(10, "ordine_mese_anno"),
+                Map.entry(11, "ordine_feriale_non"),
+                Map.entry(12, "ordine_festivo_non"),
+                Map.entry(13, "ordine_codice_stato"),
+                Map.entry(14, "ordine_stato_nome"),
+                Map.entry(15, "ordine_sesso_acquirente"),
+                Map.entry(16, "ordine_quantita"),
+                Map.entry(17, "ordine_prezzo_pagato"),
+                Map.entry(18, "ordine_sconto"),
+                Map.entry(19, "ordine_outlet"),
+                Map.entry(20, "ordine_brand"),
+                Map.entry(21, "ordine_collezione"),
+                Map.entry(22, "ordine_colore"),
+                Map.entry(23, "ordine_sesso_articolo"),
+                Map.entry(24, "ordine_metodo_pagamento"),
+                Map.entry(25, "ordine_taglia"),
+                Map.entry(26, "ordine_categoria"),
+                Map.entry(27, "ordine_macro_categoria"));
     }
 
     @Test
@@ -62,14 +60,11 @@ public class LoadDataTest {
 
     @Test
     public void completeLoadDataOnDWH() throws IOException, InterruptedException, URISyntaxException {
-        System.out.println("[EXECUTING] Test completo");
-        System.out.println("[EXECUTING] CANCELLO DATI PRECEDENTI");
         BigQuery bigQuery = BigQueryOptions.getDefaultInstance().getService();
         QueryJobConfiguration jobConfiguration = QueryJobConfiguration.newBuilder("DELETE FROM `biproject-itss.dataset.test_tabella` WHERE TRUE;").build();
         JobId jobId = JobId.of(UUID.randomUUID().toString());
         Job job = bigQuery.create(JobInfo.newBuilder(jobConfiguration).setJobId(jobId).build());
         job.waitFor();
-        System.out.println("[EXECUTING] CANCELLAZIONE ESEGUITA");
 
         LoadData loadData = new LoadData(Paths.get(Objects.requireNonNull(LoadDataTest.class.getClassLoader().getResource("")).toURI()).toString(), "test_tabella");
         loadData.startLoad(0, 2);
@@ -85,7 +80,7 @@ public class LoadDataTest {
         TableResult result = job.getQueryResults();
         //QUI IL TEST DEVE ESSERE MENO FISCALE, IN QUANTO PER IL MULTI THREADING QUESTO TEST POTREBBE ESSERE RICHIAMATO PRIMA CHE L'UPLOAD SIA ULTIMATO
         assert (result.getTotalRows() == 8 || result.getTotalRows() == 4) : "NUMERO RIGHE RESTITUITO NON CORRETTO: " + result.getTotalRows();
-        String fileJSON = new String(Files.readAllBytes(Paths.get(Objects.requireNonNull(LoadDataTest.class.getClassLoader().getResource("data_result.json")).toURI())), StandardCharsets.UTF_8);
+        String fileJSON = Files.readString(Paths.get(Objects.requireNonNull(LoadDataTest.class.getClassLoader().getResource("data_result.json")).toURI()));
         JsonParser jsonParser = new JsonParser();
         JsonObject object = (JsonObject) jsonParser.parse(fileJSON);
         JsonArray array = (JsonArray) object.get("result");
@@ -103,14 +98,11 @@ public class LoadDataTest {
 
     @Test
     public void interruptedLoadDataOnDWH() throws IOException, InterruptedException, URISyntaxException {
-        System.out.println("[EXECUTING] Test interrotto");
-        System.out.println("[EXECUTING] CANCELLO DATI PRECEDENTI");
         BigQuery bigQuery = BigQueryOptions.getDefaultInstance().getService();
         QueryJobConfiguration jobConfiguration = QueryJobConfiguration.newBuilder("DELETE FROM `biproject-itss.dataset.test_tabella` WHERE TRUE;").build();
         JobId jobId = JobId.of(UUID.randomUUID().toString());
         Job job = bigQuery.create(JobInfo.newBuilder(jobConfiguration).setJobId(jobId).build());
         job.waitFor();
-        System.out.println("[EXECUTING] CANCELLAZIONE ESEGUITA");
         LoadData loadData = new LoadData(Paths.get(Objects.requireNonNull(LoadDataTest.class.getClassLoader().getResource("")).toURI()).toString(), "test_tabella");
         loadData.startLoad(0, 1);
         assert (loadData.getLastLoad(Calendar.getInstance().getTime()) == 0) : "ERRORE NEL SALVATAGGIO DEL JOB: " + loadData.getLastLoad(Calendar.getInstance().getTime());
